2005-08-03  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-i386/pcrel16.d: Updated.
	* ld-i386/pcrel16.s: Likewise.
	* ld-x86-64/pcrel16.d: Likewise.

2005-08-01  Richard Sandiford  <richard@codesourcery.com>

	* ld-mips/mips-elf-flags.exp: Add more good_combination tests.

2005-07-28  Ben Elliston  <bje@gnu.org>

	* lib/ld-lib.exp (run_ld_link_exec_tests): Add new parameter
	${targets_to_xfail} that is applied for each test item.
	* ld-elf/elf.exp: Pass *-*-netbsdelf* as an xfailed target.

2005-07-27  Alan Modra  <amodra@bigpond.net.au>

	* ld-elfweak/size2a.s: Extend test to check size for two weaks.
	* ld-elfweak/size2b.s: Likewise.
	* ld-elfweak/size2.d: Update.

2005-07-18  Jan Beulich  <jbeulich@novell.com>

	* ld-i386/abs.s, ld-i386/zero.s, ld-i386/abs.d, ld-x86-64/abs.d,
	ld-i386/pcrel16.s, ld-i386/pcrel16.d, ld-x86-64/pcrel16.d,
	ld-i386/pcrel8.s, ld-i386/pcrel8.d, ld-x86-64/pcrel8.d: New.
	* ld-i386/i386.exp, ld-x86-64/x86-64.exp: Run new tests.

2005-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* lib/ld-lib.exp (run_ld_link_exec_tests): Ignore assembler
	warnings.

2005-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* lib/ld-lib.exp (run_ld_link_exec_tests): Update comments.

2005-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/elf.exp (array_tests): New.
	Call run_ld_link_exec_tests with array_tests.

	* ld-elf/fini.c: New file.
	* ld-elf/fini.out: Likewise.
	* ld-elf/init.c: Likewise.
	* ld-elf/init.out: Likewise.
	* ld-elf/preinit.c: Likewise.
	* ld-elf/preinit.out: Likewise.

	* lib/ld-lib.exp (run_ld_link_exec_tests): New.

2005-07-12  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/sdalib.s (lib_var): Size it.

2005-07-08  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-ia64/tlsbin.rd: Update for empty section removal change.
	* ld-ia64/tlsbin.sd: Likewise.
	* ld-ia64/tlspic.dd: Likewise.
	* ld-ia64/tlspic.rd: Likewise.
	* ld-ia64/tlspic.sd: Likewise.
	* ld-x86-64/tlspic.dd: Likewise.
	* ld-x86-64/tlspic.rd: Likewise.

2005-07-08  Alan Modra  <amodra@bigpond.net.au>
