@@ -3,8 +3,8 @@
 
 DYNAMIC RELOCATION RECORDS
 OFFSET   TYPE              VALUE 
-000083b0 R_ARM_TLS_DTPMOD32  \*ABS\*
-000083b8 R_ARM_TLS_DTPMOD32  lib_gd
-000083bc R_ARM_TLS_DTPOFF32  lib_gd
+.* R_ARM_TLS_DTPMOD32  \*ABS\*
+.* R_ARM_TLS_DTPMOD32  lib_gd
+.* R_ARM_TLS_DTPOFF32  lib_gd
 
 
