@@ -1,3 +1,10 @@
+2005-08-08  Richard Earnshaw  <richard.earnshaw@arm.com>
+
+	* ld-arm/mixed-app.sym: Expact _stack to be in the ABS section.
+	* ld-arm/mixed-lib.sym: Likewise.
+	* tls-lib.d: Use a regexp for the address locations.
+	* tls-lib.r: Likewise.
+
 2005-08-03  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-i386/pcrel16.d: Updated.
